--- a/main.html
+++ b/main.html
@@ -20,13 +20,13 @@
 
         </ul>
 
-        <button id="next-button">Next Question</button>
+        <button id="next-button" class="btn next-btn">Next Question</button>
     </div>
     <!-- Scoreboard -->
     <div id="scoreboard" class="Scoreboard hidden">
         <h2>Quiz Completed</h2>
         <p id="score-message" class="score-message"></p>
-        <button id="restart-button" class="restart-btn">
+        <button id="restart-button" class="btn restart-btn">
             Restart Quiz
         </button>
     </div>
